@@ -1,3 +1,7 @@
+2006-07-01  Mark Grebe  <markgrebe@yahoo.com>
+* antic.[ch], ui.c: new style of artifacting
+
+
 2006-06-29  Piotr Fusik  <fox@scene.pl>
 * win32/msc/Makefile, win32/msc/config.h, DOC/INSTALL:
   upgraded VC++ from 6.0 to 2005
